--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@ body {
     font-weight: 500;
 }
 
+/* navbar from here */
+
 nav {
     background: var(--bg-heading);
     font-size: 1.625rem;
@@ -26,6 +28,8 @@ nav {
     padding-bottom: 0.5rem;
 }
 
+/* logo and toggle button */
+
 .logo {
     height: var(--logo-height);
     filter: invert(100%) sepia(0%) saturate(5790%) hue-rotate(294deg) brightness(102%) contrast(93%);
@@ -36,6 +40,8 @@ nav {
     font-size: var(--logo-height);
 }
 
+/* text content */
+
 .nav-link {
     text-transform: capitalize;
     color: var(--bs-white);
@@ -45,6 +51,7 @@ nav {
 
 .nav-link:hover {
     color: var(--bs-gray-400);
+    border-bottom: 0.5rem solid #6CCEF9;
     animation: pulse 2s linear infinite;
 }
 
@@ -62,6 +69,16 @@ nav {
     }
 }
 
+/* ends navbar */
+
+/* header from here */
+
+.heading {
+    padding-top: 30vh;
+}
+
+/* info  */
+
 .introduction {
     background: center / cover no-repeat url('./assest/homepage-background.jpg');
     height: 100vh;
@@ -69,14 +86,18 @@ nav {
     padding: 0;
 }
 
-.heading {
-    padding-top: 30vh;
-}
-
 .greeting, .basic-intro {
     font-size: var(--size-20);
     letter-spacing: 0.2em;
 }
+
+.my-name {
+    font-size: var(--size-60);
+    letter-spacing: 0.54em;
+    margin: 0.5rem 0;
+}
+
+/* button get info */
 
 .get-info > button {
     color: var(--bs-white);
@@ -91,11 +112,6 @@ nav {
     box-shadow: 0 0 1.25rem rgba(255, 255, 255, 0.3);   
 }
 
-.my-name {
-    font-size: var(--size-60);
-    letter-spacing: 0.54em;
-}
-
 .get-info > button:hover {
     color: var(--bs-gray-400);
     background: transparent;
@@ -106,7 +122,70 @@ nav {
     margin-right: 2rem;
 }
 
-@media (max-width: 740px) {
+/* ends header */
+.full-fill {
+    border-radius: 50%;
+    background: linear-gradient(98.43deg, #6CCEF9 -16.37%, #7E7BFF 112.23%);
+    filter: blur(13.8978px);
+}
+
+.first-circle {
+    width: 242px;
+    height: 242px;
+    
+    left: -121px;
+    bottom: 1vh;
+}
+
+.second-circle {
+    width: 164px;
+    height: 164px;
+
+    left: 50%;
+    top: 15vh;
+}
+
+.third-circle {
+    width: 38px;
+    height: 38px;
+
+    left: 12%;
+    top: 20vh;
+}
+
+.fourth-circle{
+    width: 19px;
+    height: 19px;
+
+    left: 45%;
+    bottom: 15vh;
+    filter: none;
+}
+
+.fifth-circle {
+    right: 5%;
+    bottom: 15vh;
+}
+
+.sixth-circle {
+    right: 1%;
+    bottom: 50vh;
+}
+
+.seventh-circle {
+    left: 43%;
+    bottom: 1vh;
+}
+
+.eighth-circle {
+    left: 47%;
+    bottom: 12vh;
+}
+
+
+/* medium screen */
+
+@media (max-width: 800px){
     .nav-container, .nav-body {
         flex-direction: column;
     }
@@ -129,8 +208,21 @@ nav {
         font-size: calc(var(--size-20) + 0.25rem);
     }
 
+    .nav-link:hover {
+        border: 0;
+    }
+
+}
+
+/* small screen */
+
+@media (max-width: 740px) {
     .heading {
-        padding-top: 16.5vh;
+        padding-top: 17vh;
+    }
+
+    .greeting, .basic-intro {
+        font-size: calc(var(--size-20) - 0.5rem);
     }
 
     .my-name {
@@ -147,4 +239,6 @@ nav {
         margin-right: 0;
     }
 }
+
+
 
